# maemo-statusmenu-volume

./: .gitignore  AUTHORS  Makefile.am  configure.ac  uncrustify.cfg
debian/: changelog  control  rules
src/: Makefile.am  item.c  sinks.ini  volume.desktop  volume_steps_update
